--- a/harithmapos/templates/error/500.html
+++ b/harithmapos/templates/error/500.html
@@ -1,4 +1,4 @@
-{% extends 'layout/base.html' %}
+{% extends 'layout/customer_base.html' %}
 {% block title %} Error {% endblock %}
 {% block body %}
 <div class="container mt-4">
