--- a/harithmapos/templates/invoice/item_head.html
+++ b/harithmapos/templates/invoice/item_head.html
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col d-flex justify-content-between align-items-center">
                 <form class="mb-0 d-flex" action="" method="GET" autocomplete="off">
-                    <input type="text" class="form-control me-2" name="query" id="query" placeholder="{{ query if query else 'Search'}}">
+                    <input type="text" class="form-control me-2" name="query" id="query" placeholder="{{ query if query else 'Invoice...'}}">
                     <input type="submit" value="Search" class="btn btn-primary me-2" name="">
                     <a href="{{ url_for('invoice_blueprint.item_invoice_head') }}"><input type="submit" value="Reset" class="btn btn-secondary" ></a>
                 </form> 
