--- a/harithmapos/templates/invoice/create.html
+++ b/harithmapos/templates/invoice/create.html
@@ -9,40 +9,33 @@
                 </header>
                 <article class="card-body">
                     <form method="POST" action="">
+                        {{ form.vehical_id(class="form-control", id="vehicalId") }}
+                        {{ form.employee_id(class="form-control", id="employeeId") }}
+                        {{ form.washbay_id(class="form-control", id="washbayId") }}
                         {{ form.hidden_tag() }}
                         <fieldset class="form-group">
-                            <div class="form-group">
-                                {{ form.vehical.label(class="form-label mt-3",for="vehicalDataList") }}
-                                {{ form.vehical(class="form-control", list="datalistOptionsVehical", id="vehicalDataList", placeholder="Search Vehical...") }}
-                                <datalist id="datalistOptionsVehical">
-                                    {% for vehical in vehicals %}
-                                        <option value="{{vehical.id}}">{{vehical.number}}</option>
-                                    {% endfor %}
-                                </datalist>
+                            <!-- Vehicle Search -->
+                            <div class="form-group position-relative">
+                                {{ form.vehical.label(class="form-label mt-3", for="vehicalSearch") }}
+                                {{ form.vehical(class="form-control", id="vehicalSearch", placeholder="Search Vehical...", autocomplete="off") }}
+                                <ul class="dropdown-menu w-100" id="vehicalDropdown"></ul>
                             </div>
-                            <div class="form-group">
-                                {{ form.employee.label(class="form-label mt-3",for="employeeDataList") }}
-                                {{ form.employee(class="form-control", list="datalistOptionsEmployee", id="employeeDataList", placeholder="Search Employee...") }}
-                                <datalist id="datalistOptionsEmployee">
-                                    {% for employee in employees %}
-                                        <option value="{{employee.id}}">{{employee.name}}</option>
-                                    {% endfor %}
-                                </datalist>
+                            <!-- Employee Search -->
+                            <div class="form-group position-relative">
+                                {{ form.employee.label(class="form-label mt-3", for="employeeSearch") }}
+                                {{ form.employee(class="form-control", id="employeeSearch", placeholder="Search Employee...", autocomplete="off") }}
+                                <ul class="dropdown-menu w-100" id="employeeDropdown"></ul>
                             </div>
-                            <div class="form-group">
-                                {{ form.washbay.label(class="form-label mt-3",for="washbayDataList") }}
-                                {{ form.washbay(class="form-control", list="datalistOptionsWashbay", id="washbayDataList", placeholder="Search WashBay...") }}
-                                <datalist id="datalistOptionsWashbay">
-                                    {% for washbay in washbays %}
-                                        <option value="{{washbay.id}}">{{washbay.name}}</option>
-                                    {% endfor %}
-                                </datalist>
+                            <!-- Washbay Search -->
+                            <div class="form-group position-relative">
+                                {{ form.washbay.label(class="form-label mt-3", for="washbaySearch") }}
+                                {{ form.washbay(class="form-control", id="washbaySearch", placeholder="Search WashBay...", autocomplete="off") }}
+                                <ul class="dropdown-menu w-100" id="washbayDropdown"></ul>
                             </div>
                             <div class="form-group">
                                 {{ form.current_milage.label(class="form-control-label mt-3") }}
                                 {{ form.current_milage(class="form-control form-control-lg") }}
                             </div>
-                            
                         </fieldset>
                         <div class="form-group">
                             {{ form.submit(class="btn btn-outline-info mt-3") }}
@@ -53,4 +46,11 @@
         </div>
     </div>
 </div>
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        setupDynamicDropdown("vehicalSearch", "vehicalDropdown", "/search/vehicals", "vehicalId");
+        setupDynamicDropdown("employeeSearch", "employeeDropdown", "/search/employees", "employeeId");
+        setupDynamicDropdown("washbaySearch", "washbayDropdown", "/search/washbays", "washbayId");
+    });
+</script>
 {% endblock body %}
