--- a/harithmapos/templates/layout/navbar.html
+++ b/harithmapos/templates/layout/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container">
         <a href="" class="navbar-brand lead">
-            <img src="{{url_for('static', filename='vehical.png')}}" height="27" class="d-inline-block align-text-top">
+            <img src="{{url_for('static', filename='images/vehical.png')}}" height="27" class="d-inline-block align-text-top">
             <b>Harithma</b>
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
