Added showall argument to show all entities when selcted

--- a/harithmapos/templates/invoice/head.html
+++ b/harithmapos/templates/invoice/head.html
@@ -129,8 +129,8 @@
 <script>
     document.addEventListener("DOMContentLoaded", () => {
         setupDynamicDropdown("vehicalSearch", "vehicalDropdown", "/search/vehicals", "vehicalId");
-        setupDynamicDropdown("employeeSearch", "employeeDropdown", "/search/employees", "employeeId");
-        setupDynamicDropdown("washbaySearch", "washbayDropdown", "/search/washbays", "washbayId");
+        setupDynamicDropdown("employeeSearch", "employeeDropdown", "/search/employees", "employeeId", true);
+        setupDynamicDropdown("washbaySearch", "washbayDropdown", "/search/washbays", "washbayId", true);
     });
 </script>
 {% endblock %}
