--- a/harithmapos/templates/layout/customer_base.html
+++ b/harithmapos/templates/layout/customer_base.html
@@ -13,11 +13,13 @@
         
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+        <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}">
+
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
                 <a href="" class="navbar-brand lead">
-                    <img src="{{url_for('static', filename='vehical.png')}}" height="27" class="d-inline-block align-text-top">
+                    <img src="{{url_for('static', filename='images/logo.png')}}" height="27" class="d-inline-block align-text-top">
                     <b>Harithma</b>
                 </a>
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
