--- a/harithmapos/templates/user/login.html
+++ b/harithmapos/templates/user/login.html
@@ -44,7 +44,7 @@
                 </article>
                 <div class="border-top card-body text-center">
                     <small class="text-muted">
-                        Don't have an account? <a href="{{ url_for('user_blueprint.register') }}">Register</a>
+                        <!-- Don't have an account? <a href="{{ url_for('user_blueprint.register') }}">Register</a> -->
                     </small>
                 </div>
             </div>
