--- a/harithmapos/templates/customer.html
+++ b/harithmapos/templates/customer.html
@@ -87,7 +87,7 @@
                         <td class="align-middle">{{customer.update_dttm}}</td> -->
                         <td>
                             {% for vehical in customer.vehicals %}
-                                <a href="/update_vehical/{{vehical.id}}" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#update_vehical{{vehical.id}}">{{vehical.number}}</a>
+                                <a href="{{ url_for('vehical_blueprint.update_vehical', vehical_id=vehical.id) }}" class="btn btn-light" data-bs-toggle="modal" data-bs-target="#update_vehical{{vehical.id}}">{{vehical.number}}</a>
                                 <!-- Modal for updating a vehical -->
                                 <div id="update_vehical{{vehical.id}}" class="modal fade" role="dialog">
                                     <div class="modal-dialog">
@@ -118,7 +118,7 @@
                                                     </div>
                                                     <div class="form-group">
                                                         <button class="btn btn-warning mt-4" type="submit">Update vehical</button>
-                                                        <a href="/delete_vehical/{{vehical.id}}" class="btn btn-danger mt-4" onclick="return confirm('Are you sure to delete?')">Delete</a>
+                                                        <a href="{{ url_for('vehical_blueprint.delete_vehical', vehical_id=vehical.id) }}" class="btn btn-danger mt-4" onclick="return confirm('Are you sure to delete?')">Delete</a>
                                                     </div>
                                                 </form>
                                             </div>
@@ -131,9 +131,9 @@
                             {% endfor %}
                         </td>
                         <td class="text-end">
-                            <a href="/insert_vehical/{{customer.id}}" class="btn btn-success" data-toggle="tooltip" data-placement="top" title="Add Vehical" data-bs-toggle="modal" data-bs-target="#insert_vehical{{customer.id}}"><i class="fa fa-car"></i></a>
-                            <a href="/update_customer/{{customer.id}}" class="btn btn-sm btn-warning" data-toggle="tooltip" data-placement="top" title="Update Customer" data-bs-toggle="modal" data-bs-target="#update_customer{{customer.id}}">Edit</a>
-                            <a href="/delete_customer/{{customer.id}}" class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="Delete Customer" onclick="return confirm('Are you sure to delete?')">Delete</a>
+                            <a href="{{ url_for('vehical_blueprint.insert_vehical') }}" class="btn btn-success" data-toggle="tooltip" data-placement="top" title="Add Vehical" data-bs-toggle="modal" data-bs-target="#insert_vehical{{customer.id}}"><i class="fa fa-car"></i></a>
+                            <a href="{{ url_for('customer_blueprint.update_customer', customer_id=customer.id) }}" class="btn btn-sm btn-warning" data-toggle="tooltip" data-placement="top" title="Update Customer" data-bs-toggle="modal" data-bs-target="#update_customer{{customer.id}}">Edit</a>
+                            <a href="{{ url_for('customer_blueprint.delete_customer', customer_id=customer.id) }}" class="btn btn-sm btn-danger" data-toggle="tooltip" data-placement="top" title="Delete Customer" onclick="return confirm('Are you sure to delete?')">Delete</a>
                         </td>
                     </tr>
                 
