updated paths and sender id

--- a/harithmapos/templates/invoice/create.html
+++ b/harithmapos/templates/invoice/create.html
@@ -48,9 +48,9 @@
 </div>
 <script>
     document.addEventListener("DOMContentLoaded", () => {
-        setupDynamicDropdown("vehicalSearch", "vehicalDropdown", "/search/vehicals", "vehicalId");
-        setupDynamicDropdown("employeeSearch", "employeeDropdown", "/search/employees", "employeeId", true);
-        setupDynamicDropdown("washbaySearch", "washbayDropdown", "/search/washbays", "washbayId", true);
+        setupDynamicDropdown("vehicalSearch", "vehicalDropdown", "/app/search/vehicals", "vehicalId");
+        setupDynamicDropdown("employeeSearch", "employeeDropdown", "/app/search/employees", "employeeId", true);
+        setupDynamicDropdown("washbaySearch", "washbayDropdown", "/app/search/washbays", "washbayId", true);
     });
 </script>
 {% endblock body %}
