--- a/harithmapos/templates/invoice/head.html
+++ b/harithmapos/templates/invoice/head.html
@@ -128,9 +128,9 @@
 
 <script>
     document.addEventListener("DOMContentLoaded", () => {
-        setupDynamicDropdown("vehicalSearch", "vehicalDropdown", "/search/vehicals", "vehicalId");
-        setupDynamicDropdown("employeeSearch", "employeeDropdown", "/search/employees", "employeeId", true);
-        setupDynamicDropdown("washbaySearch", "washbayDropdown", "/search/washbays", "washbayId", true);
+        setupDynamicDropdown("vehicalSearch", "vehicalDropdown", "/app/search/vehicals", "vehicalId");
+        setupDynamicDropdown("employeeSearch", "employeeDropdown", "/app/search/employees", "employeeId", true);
+        setupDynamicDropdown("washbaySearch", "washbayDropdown", "/app/search/washbays", "washbayId", true);
     });
 </script>
 {% endblock %}
